# agentic

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  compose.env.example  compose.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md
.github/: copilot-instructions.md
.github/instructions/: containerization.instructions.md  github_actions.instructions.md  python.instructions.md
.github/workflows/: build-a2a-inspector.yml  build-agents-meraki-agent.yml  build-agents-network-agent.yml  build-agents-provisioning-agent.yml  build-agents-simple.yml  build-agents-thousandeyes-agent.yml  build-agents-weather-agent.yml  build-customer-database-seeder.yml  build-orchestrator-agent.yml  build-python-base-image.yml  build-python-container-image.yml  build-simple-agent.yml  build-tools-mcp-customer-database-server.yml  build-tools-mcp-meraki-server.yml  build-tools-mcp-provisioning-server.yml  build-tools-mcp-weather-server.yml  reusable-build-python-container-image.yml  reusable-build-python-packages.yml
agents/meraki_agent/: Containerfile  README.md  meraki_agent.py  system_prompt.md
agents/network_agent/: Containerfile  network_agent.py  system_prompt.md
agents/provisioning_agent/: Containerfile  README.md  provisioning_agent.py  system_prompt.md
agents/simple_agent/: Containerfile  README.md  a2a.yml  agent.py  agent.yml  system_prompt.md
agents/thousandeyes_agent/: Containerfile  README.md  system_prompt.md  test_agent.py  thousandeyes_agent.py
agents/weather_agent/: Containerfile  README.md  SYSTEM_PROMPT.md  requirements.txt  system_prompt.md  weather_agent.py
agents/workflow_weather_agent/: Containerfile  README.md  system_promt_extract_intent.md  workflow_weather_agent.py
images/customer_database_seeder/: Containerfile  README.md  seed.py
images/orchestrator_agent/: Containerfile  README.md  agent.yaml  server.yaml
images/python/: Containerfile  requirements.txt
images/simple_agent/: Containerfile  README.md  agent.yaml  server.yaml
modules/terraform-kubernetes-orchestrator-agent/: README.md  configmap.tf  ingress.tf  locals.tf  outputs.tf  secret.tf  variables.tf  versions.tf
modules/terraform-kubernetes-simple-agent/: README.md  deployment.tf  locals.tf  service.tf  variables.tf
plans/: simple_agent_design.md
src/agentic/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/agentic/: __init__.py
tests/openai/: test_compatible_api.py
tests/orchestrator_agent/: test_a2a_workers.py  test_agent_spec.py  test_graph.py  test_interfaces.py  test_taskstore.py
tests/runtime/: test_health.py  test_reload.py  test_server_spec.py
tests/simple_agent/: test_agent_spec.py  test_health.py  test_reload.py  (+3 more)
(+51 files in other folders)
