[project]
name = "agentic"
version = "0.1.0"
description = "Agentic architecture components."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "ruff>=0.14.1",
]

# --------------------------------------------------------------------------------------
# Component Dependency Groups
# --------------------------------------------------------------------------------------

agents_weather_agent = [
    "fastapi>=0.121.1",
    "pydantic-ai-slim[a2a,mcp,openai]>=1.3.0",
    "rich>=14.2.0",
]

tools_mcp_weather_server = [
    "mcp[cli]>=1.16.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
]


# --------------------------------------------------------------------------------------
# Build System and Project Tooling
# --------------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[tool.ruff]
line-length = 88
indent-width = 4

# Target Python 3.13
target-version = "py313"

[tool.ruff.lint]
# B: flake8-bugbear
# I: flake8-import-order
# Q: flake8-quotes
extend-select = [ "B", "I", "Q" ]
