[project]
name = "agentic"
version = "0.1.0"
description = "Agentic architecture components."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server,telemetry]>=0.3.20",
    "fastapi>=0.121.1",
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.0",
    "openai>=2.9.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic>=2.12.4",
    "pydantic-ai-slim[a2a,fastmcp,mcp,openai]>=1.14.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]


# --------------------------------------------------------------------------------------
# Dependency Groups
# --------------------------------------------------------------------------------------

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "ruff>=0.14.1",
]


# --------------------------------------------------------------------------------------
# Build System and Project Tooling
# --------------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[tool.ruff]
line-length = 88
indent-width = 4

# Target Python 3.13
target-version = "py313"

[tool.ruff.lint]
# B: flake8-bugbear
# I: flake8-import-order
# Q: flake8-quotes
extend-select = [ "B", "I", "Q" ]
